creation de la table livre avec migration et entity

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+test2:
+    path:       /test2
+    controller: App\Controller\testController::test2
